--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/foahtcm?serverTimezone=UTC&use
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=management.community.xiaonong.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+#日志文件
+logging.file=logs/community.log
+logging.level.root=info
+#一天日志最大200MB
+logging.file.max-size=200MB
+#日志保留30以内的，日志刷新前一天的
+logging.file.max-history=30
